# CSCE-3613

./: README.md  tuner-script_lin.sh
CMAKE FILE/: CMakeLists.txt  readme.txt
CMAKE FILE/source/: factorial.c  gcd.c  gn3.c  main.c
CMAKE FILE/src/: CMakeLists.txt  factorial.c  gcd.c  main.c  prime.c
CMAKE FILE/src/headers/: factorial.h
